<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context="com.wellsen.arithmetictest.QuestionActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/question_solved_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/questionSolved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_solved"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/question_time_remaining_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/timeRemaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_time_remaining"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/questionEquation"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1.0"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="60sp" />

    <Button
        android:id="@+id/answerButton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp" />

    <Button
        android:id="@+id/answerButton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp" />

    <Button
        android:id="@+id/answerButton3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp" />

    <Button
        android:id="@+id/answerButton4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp" />

    <!--<Button-->
        <!--android:id="@+id/answerButton5"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="0.5"-->
        <!--android:layout_margin="3dp" />-->

</LinearLayout>